openshift/svc_svc2.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: golang-sample-svc2
    app.kubernetes.io/component: golang-sample-svc2
    app.kubernetes.io/instance: golang-sample-svc2
    app.kubernetes.io/name: golang-sample-svc2
    app.kubernetes.io/part-of: golang-sample
  name: golang-sample-svc2
spec:
  internalTrafficPolicy: Cluster
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: golang-sample-svc2
    deploymentconfig: golang-sample-svc2
  sessionAffinity: None
  type: ClusterIP
