openshift/route_main.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: golang-sample-main
    app.kubernetes.io/component: golang-sample-main
    app.kubernetes.io/instance: golang-sample-main
    app.kubernetes.io/name: golang-sample-main
    app.kubernetes.io/part-of: golang-sample
  name: golang-sample-main
spec:
  port:
    targetPort: http
  to:
    kind: Service
    name: golang-sample-main
    weight: 100
  wildcardPolicy: None
